correct z-index and hover

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -26,10 +26,6 @@
 }
 
 
-p:hover {
-    cursor: pointer;
-}
-
 header {
     background-color: var(--color-paragraph-background);
     display: grid;
@@ -37,9 +33,10 @@ header {
     grid-template-rows: auto;
     position: fixed;
     top: 0;
-    
+   
     width: 100%;  
     max-height: 90px;
+    z-index: 10;
 }
 
 header a {
@@ -75,7 +72,7 @@ header p {
     grid-row: 3;
     font-family: var(--font-paragraph);
     padding-left: .5rem;
-    z-index: 10;
+    /*z-index: 10;*/
     font-size: .75rem;
     
 }
@@ -143,9 +140,6 @@ p {
     transform: translate(0, -8px) rotate(45deg);
 }
 
-.active {
-    text-decoration: underline;
-}
 
 nav #container:hover {
     cursor: pointer;
@@ -162,6 +156,7 @@ nav {
     margin-right: 1vw;
     margin-left: 3px;
     min-width: 80px;
+    
 }
 
 
@@ -194,14 +189,18 @@ span img {
 }
 
 nav ul li a:hover {
-    background-color: var(--color-nav-hover-background);
+    
     color: var(--color-nav-hover-link);
+    background-color: var(--color-nav-hover-background);
     text-decoration: underline;
+    transform: none;
     cursor: pointer;
 }
 
-nav ul a:active{
-    border-radius: 20px;
+.active{
+    text-decoration: underline;
+    background-color: var(--color-primary);
+
 }
 
 
@@ -212,7 +211,6 @@ ul:hover {
 
 nav ul.open {
     display: block;
-    /*flex-direction: column;*/
 }
 
 
@@ -233,7 +231,7 @@ nav ul.open {
 main {
     position: relative;
     top: 5.5rem;
-    z-index: -1;
+    /*z-index: -1;*/
 }
 
 hr {
@@ -244,6 +242,10 @@ hr {
 
 .emoji {
     font-size: 5vh;
+}
+
+#event:hover {
+    cursor: pointer;
 }
 
 main section p {
@@ -352,10 +354,6 @@ picture img{
 }
 
 
-picture img:hover {
-    cursor: pointer;
-}
-
 #discover-main {
     top: 6rem;
     align-items: center;
@@ -398,4 +396,9 @@ picture img:hover {
     color: black;
 }
 
+#around-town picture img:hover{
+    border: solid var(--color-accent3) 20px;
+    border-radius: 5px;
+    transition: border .5s;
+}
 
